# Hippocampus_segmentation_algorithms

./: CMakeLists.txt  README.md  main.cc
functions/: functions.cc  functions.h
